fix:修复 TableData 在设置 isWrap 为 true 时，样式错误的 bug

--- a/src/components/common/data/TableData/TableData.less
+++ b/src/components/common/data/TableData/TableData.less
@@ -1,6 +1,10 @@
 @import '../../../../styles/variables.less';
 
 .table-data {
+  table {
+    // 只有定义了表格的布局算法为fixed，下面td的定义才能起作用
+    table-layout: fixed;
+  }
   // 单元格内容溢出隐藏
   &--no-wrap {
     // 表格中单元格单行溢出隐藏
